[gd_scene load_steps=4 format=2]

[ext_resource path="res://items/experience/ExpGem.gd" type="Script" id=1]
[ext_resource path="res://items/experience/sounds/pickup.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1.5 )

[node name="ExpGem" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1.5 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2.0
margin_bottom = 3.0
color = Color( 0.207843, 0.219608, 0.878431, 1 )

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 0.33

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0

[connection signal="body_entered" from="." to="." method="_on_ExpGem_body_entered"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="finished" from="PickupSound" to="." method="_on_PickupSound_finished"]
